# ankideck

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
csv/: test_file.csv
scripts/: deck_stats.py  modify_decks.py
src/ankideck/: __init__.py  add_tts.py  extract_text.py  fix_comma.py  utils.py
